'add pixel perfect on page Artikler, Blog, App, Author, Privatil'

--- a/html/app.html
+++ b/html/app.html
@@ -170,9 +170,18 @@
                             </div>
                         </div>
                         <aside class="layout__sidebar sidebar">
-                            <div class="sidebar__item">
+                            <div class="sidebar__item sidebar__menu">
     <h3 class="sidebar__title h3-title">Popular Danske Kroner Currency Pairings</h3>
     <ul class="sidebar__list">
+        <li>
+            <a class="popular-card app-card" href="#">
+                <img src="./images/country/se.svg" alt="" width="40" height="24">
+                <h4 class="h4-title">SEK til DKK</h4>
+                <svg class="icon icon__stroke" width="24" height="24">
+                    <use href="./images/icon/sprite.svg#arrow-right"></use>
+                </svg>
+            </a>
+        </li>
         <li>
             <a class="popular-card app-card" href="#">
                 <img src="./images/country/se.svg" alt="" width="40" height="24">
@@ -262,7 +271,7 @@
     </ul>
 </div>
 
-                            <a href="" class="sidebar__item sidebar__banner">
+                            <a href="#" class="sidebar__item sidebar__banner">
     <img src="./images/banner-lg.jpg" width="468" height="434" alt="">
 </a>
                         </aside>
