--- a/html/author.html
+++ b/html/author.html
@@ -126,7 +126,7 @@
                         <a href="#" target="_blank" rel="nofollow">
                             
     <svg class="icon " width="24" height="22">
-        <use href="./images/icon/sprite.svg#twitter"></use>
+        <use href="./images/icon/sprite.svg#facebook"></use>
     </svg>
 
                         </a>
@@ -135,7 +135,7 @@
                         <a href="#" target="_blank" rel="nofollow">
                             
     <svg class="icon " width="24" height="22">
-        <use href="./images/icon/sprite.svg#facebook"></use>
+        <use href="./images/icon/sprite.svg#twitter"></use>
     </svg>
 
                         </a>
@@ -163,10 +163,10 @@
                 <div class="container">
                     <div class="layout">
                         <div class="layout__left article">
-                            <h2 class="h2-title">Recent articles by Compriso</h2>
+                            <h2 class="h2-title section__title">Recent articles by Compriso</h2>
                             <div class="js-slider-article swiper">
                                 <ul class="article__list swiper-wrapper">
-                                    <li class="article__cart app-card swiper-slide">
+                                    <li class="article__cart article__cart-center app-card swiper-slide">
                                         <a href="#" class="article__image image-hover">
                                             <img width="206" height="118" src="./images/blog/blog1.jpg" alt="">
                                         </a>
@@ -180,7 +180,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li class="article__cart app-card swiper-slide">
+                                    <li class="article__cart article__cart-center app-card swiper-slide">
                                         <a href="#" class="article__image image-hover">
                                             <img width="206" height="118" src="./images/blog/blog1.jpg" alt="">
                                         </a>
@@ -194,7 +194,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li class="article__cart app-card swiper-slide">
+                                    <li class="article__cart article__cart-center app-card swiper-slide">
                                         <a href="#" class="article__image image-hover">
                                             <img width="206" height="118" src="./images/blog/blog1.jpg" alt="">
                                         </a>
@@ -208,7 +208,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li class="article__cart app-card swiper-slide">
+                                    <li class="article__cart article__cart-center app-card swiper-slide">
                                         <a href="#" class="article__image image-hover">
                                             <img width="206" height="118" src="./images/blog/blog1.jpg" alt="">
                                         </a>
@@ -228,7 +228,7 @@
                             </div>
                         </div>
                         <aside class="layout__sidebar sidebar">
-                            <div class="sidebar__item">
+                            <div class="sidebar__item sidebar__menu">
     <h3 class="sidebar__title h3-title">Popular Danske Kroner Currency Pairings</h3>
     <ul class="sidebar__list">
         <li>
@@ -276,9 +276,18 @@
                 </svg>
             </a>
         </li>
+        <li>
+            <a class="popular-card app-card" href="#">
+                <img src="./images/country/se.svg" alt="" width="40" height="24">
+                <h4 class="h4-title">SEK til DKK</h4>
+                <svg class="icon icon__stroke" width="24" height="24">
+                    <use href="./images/icon/sprite.svg#arrow-right"></use>
+                </svg>
+            </a>
+        </li>
     </ul>
 </div>
-                            <a href="" class="sidebar__item sidebar__banner">
+                            <a href="#" class="sidebar__item sidebar__banner">
     <img src="./images/banner-lg.jpg" width="468" height="434" alt="">
 </a>
                         </aside>
