--- a/html/blog.html
+++ b/html/blog.html
@@ -147,7 +147,7 @@
                                         <img width="442" height="253" src="./images/blog/blog1.jpg" alt="">
                                     </a>
                                     <a href="#" class="blog__title">
-                                        <h3 class="h3-title title-hover">Skal du rejse til sommer? Brug vores valutaomregner-app</h3>
+                                        <h3 class="h3-title title-hover">Skal du rejse til sommer?<br> Brug vores valutaomregner-app</h3>
                                     </a>
                                     <ul class="blog-list blog__list">
                                         <li class="blog-list__item">Author: Compriso</li>
@@ -161,7 +161,7 @@
                                         <img width="442" height="253" src="./images/blog/blog2.jpg" alt="">
                                     </a>
                                     <a href="#" class="blog__title">
-                                        <h3 class="h3-title title-hover">Skal du rejse til sommer? Brug vores valutaomregner-app</h3>
+                                        <h3 class="h3-title title-hover">Skal du rejse til sommer?<br> Brug vores valutaomregner-app</h3>
                                     </a>
                                     <ul class="blog-list blog__list">
                                         <li class="blog-list__item">Author: Compriso</li>
@@ -175,7 +175,7 @@
                                         <img width="442" height="253" src="./images/blog/blog3.jpg" alt="">
                                     </a>
                                     <a href="#" class="blog__title">
-                                        <h3 class="h3-title title-hover">Skal du rejse til sommer? Brug vores valutaomregner-app</h3>
+                                        <h3 class="h3-title title-hover">Skal du rejse til sommer?<br> Brug vores valutaomregner-app</h3>
                                     </a>
                                     <ul class="blog-list blog__list">
                                         <li class="blog-list__item">Author: Compriso</li>
@@ -189,7 +189,7 @@
                                         <img width="442" height="253" src="./images/blog/blog4.jpg" alt="">
                                     </a>
                                     <a href="#" class="blog__title">
-                                        <h3 class="h3-title title-hover">Skal du rejse til sommer? Brug vores valutaomregner-app</h3>
+                                        <h3 class="h3-title title-hover">Skal du rejse til sommer?<br> Brug vores valutaomregner-app</h3>
                                     </a>
                                     <ul class="blog-list blog__list">
                                         <li class="blog-list__item">Author: Compriso</li>
@@ -203,7 +203,7 @@
                                         <img width="442" height="253" src="./images/blog/blog5.jpg" alt="">
                                     </a>
                                     <a href="#" class="blog__title">
-                                        <h3 class="h3-title title-hover">Skal du rejse til sommer? Brug vores valutaomregner-app</h3>
+                                        <h3 class="h3-title title-hover">Skal du rejse til sommer?<br> Brug vores valutaomregner-app</h3>
                                     </a>
                                     <ul class="blog-list">
                                         <li class="blog-list__item">Author: Compriso</li>
@@ -217,7 +217,7 @@
                                         <img width="442" height="253" src="./images/blog/blog6.jpg" alt="">
                                     </a>
                                     <a href="#" class="blog__title">
-                                        <h3 class="h3-title title-hover">Skal du rejse til sommer? Brug vores valutaomregner-app</h3>
+                                        <h3 class="h3-title title-hover">Skal du rejse til sommer?<br> Brug vores valutaomregner-app</h3>
                                     </a>
                                     <ul class="blog-list">
                                         <li class="blog-list__item">Author: Compriso</li>
@@ -231,7 +231,7 @@
                                         <img width="442" height="253" src="./images/blog/blog7.jpg" alt="">
                                     </a>
                                     <a href="#" class="blog__title">
-                                        <h3 class="h3-title title-hover">Skal du rejse til sommer? Brug vores valutaomregner-app</h3>
+                                        <h3 class="h3-title title-hover">Skal du rejse til sommer?<br> Brug vores valutaomregner-app</h3>
                                     </a>
                                     <ul class="blog-list">
                                         <li class="blog-list__item">Author: Compriso</li>
@@ -245,7 +245,7 @@
                                         <img width="442" height="253" src="./images/blog/blog8.jpg" alt="">
                                     </a>
                                     <a href="#" class="blog__title">
-                                        <h3 class="h3-title title-hover">Skal du rejse til sommer? Brug vores valutaomregner-app</h3>
+                                        <h3 class="h3-title title-hover">Skal du rejse til sommer?<br> Brug vores valutaomregner-app</h3>
                                     </a>
                                     <ul class="blog-list">
                                         <li class="blog-list__item">Author: Compriso</li>
@@ -300,9 +300,18 @@
 </div>
                         </div>
                         <aside class="layout__sidebar sidebar">
-                            <div class="sidebar__item">
+                            <div class="sidebar__item sidebar__menu">
     <h3 class="sidebar__title h3-title">Popular Danske Kroner Currency Pairings</h3>
     <ul class="sidebar__list">
+        <li>
+            <a class="popular-card app-card" href="#">
+                <img src="./images/country/se.svg" alt="" width="40" height="24">
+                <h4 class="h4-title">SEK til DKK</h4>
+                <svg class="icon icon__stroke" width="24" height="24">
+                    <use href="./images/icon/sprite.svg#arrow-right"></use>
+                </svg>
+            </a>
+        </li>
         <li>
             <a class="popular-card app-card" href="#">
                 <img src="./images/country/se.svg" alt="" width="40" height="24">
@@ -392,7 +401,7 @@
     </ul>
 </div>
 
-                            <a href="" class="sidebar__item sidebar__banner">
+                            <a href="#" class="sidebar__item sidebar__banner">
     <img src="./images/banner-lg.jpg" width="468" height="434" alt="">
 </a>
                         </aside>
