--- a/html/bitcoin.html
+++ b/html/bitcoin.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no"/>
   <title>Bitcoin</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/x-icon" sizes="16x16" href="./images/favicon/favicon-16x16.png"/>
+
+
   <link rel="preload" href="./fonts/GothamPro/GothamPro.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./fonts/GothamPro/GothamPro-Medium.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./fonts/GothamPro/GothamPro-Bold.woff" as="font" type="font/woff" crossorigin="">
@@ -117,7 +117,19 @@
                     </div>
                     <div class="сonverter-сurrency__select js-select-container">
                         <label class="hidden" for="value[select-from]">Select first value</label>
-                        <select class="js-select" name="value[select]" id="value[select-from]">
+                        <select hidden class="js-select" name="value[select]" id="value[select-from]">
+                            <optgroup label="Populære">
+                                <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
+                                <option value="DKK" data-code="DKK" data-flag="./images/country/dk.svg">Danske Kroner</option>
+                                <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
+                                <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
+                                <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
+                                <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
+                                <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
+                                <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
+                                <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
+                                <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
+                            </optgroup>
                             <optgroup label="Populære">
                                 <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
                                 <option value="DKK" data-code="DKK" data-flag="./images/country/dk.svg">Danske Kroner</option>
@@ -145,7 +157,7 @@
                     </div>
                     <div class="сonverter-сurrency__select js-select-container">
                         <label class="hidden" for="value[select-to]">Select second value</label>
-                        <select class="js-select" name="value[select]" id="value[select-to]">
+                        <select hidden class="js-select" name="value[select]" id="value[select-to]">
                             <optgroup label="Populære">
                                 <option value="USD" data-code="USD" data-flag="./images/country/us.svg">Amerikanske Dollar</option>
                                 <option value="DKK" selected data-code="DKK" data-flag="./images/country/dk.svg">Danske Kroner</option>
@@ -286,9 +298,67 @@
         </div>
     </div>
 </section>
-            <section>
+            <section class="graph section">
     <div class="container">
-        <h2 class="h2-title">Chart</h2>
+        <div class="graph__top row">
+            <h2 class="h2-title">DKK to USD Chart</h2>
+            <span class="graph__input"><span class="js-input-from">1 DKK</span> = <span class="js-input-to">0.133211 USD</span></span>
+            <div class="graph__filter">
+                <ul class="graph__tabs">
+                    <li>
+                        <button type="button" class="graph__btn">12H</button>
+                    </li>
+                        <button type="button" class="graph__btn">1D</button>
+                    <li>
+                        <button type="button" class="graph__btn">1W</button>
+                    </li>
+                    <li>
+                        <button type="button" class="graph__btn">1M</button>
+                    </li>
+                    <li>
+                        <button type="button" class="graph__btn active-tab">1Y</button>
+                    </li>
+                    <li>
+                        <button type="button" class="graph__btn">2Y</button>
+                    </li>
+                    <li>
+                        <button type="button" class="graph__btn">5Y</button>
+                    </li>
+                    <li>
+                        <button type="button" class="graph__btn">10Y</button>
+                    </li>
+                </ul>
+                <div class="graph__select">
+                    <button type="button" class="graph__active-item active-tab js-mobile-menu-btn"><span>1Y</span> 
+    <svg class="icon icon__stroke" width="16" height="16">
+        <use href="./images/icon/sprite.svg#arrow-down"></use>
+    </svg>
+</button>
+                    <ul class="graph__dropdown js-mobile-menu">
+                        <li class="graph__select-item js-option">12H</li>
+                        <li class="graph__select-item js-option">1D</li>
+                        <li class="graph__select-item js-option">1W</li>
+                        <li class="graph__select-item js-option">1M</li>
+                        <li class="graph__select-item js-option">1Y</li>
+                        <li class="graph__select-item js-option">2Y</li>
+                        <li class="graph__select-item js-option">5Y</li>
+                        <li class="graph__select-item js-option">10Y</li>
+                    </ul>
+                </div>
+            </div>
+            <form class="form-search input js-focus">
+                <input type="text" placeholder="Sog pa valutakurs eller land">
+                <button type="submit">
+                    
+    <svg class="icon icon__stroke" width="24" height="24">
+        <use href="./images/icon/sprite.svg#search"></use>
+    </svg>
+
+                </button>
+            </form>
+
+        </div>
+        <div class="graph__item" id="graph" style="width:100%; height:400px;"></div>
     </div>
 </section>
             <section class="section popular">
@@ -793,5 +863,10 @@
 <script src="js/main.js"></script>
 <!-- navigation js -->
 <script src="js/navigation.js"></script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/data.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/accessibility.js"></script>
 </body>
 </html>
