'add banners on main, dkk and bitcoin page, tabs (not done) on section with graph, optimized page speed and fix semantic html'

--- a/html/artikler.html
+++ b/html/artikler.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="da">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -279,7 +279,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info small-text">august 2nd, 2021</time>
+                <span class="article__cart-info small-text">august 2nd, 2021</span>
             </div>
         </li>
         <li class="article__cart app-card">
@@ -288,7 +288,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info small-text">august 2nd, 2021</time>
+                <span class="article__cart-info small-text">august 2nd, 2021</span>
             </div>
         </li>
         <li class="article__cart app-card">
@@ -297,7 +297,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info small-text">august 2nd, 2021</time>
+                <span class="article__cart-info small-text">august 2nd, 2021</span>
             </div>
         </li>
         <li class="article__cart app-card">
@@ -306,7 +306,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info small-text">august 2nd, 2021</time>
+                <span class="article__cart-info small-text">august 2nd, 2021</span>
             </div>
         </li>
     </ul>
@@ -367,10 +367,10 @@
 <script src="js/main.js"></script>
 <!-- navigation js -->
 <script src="js/navigation.js"></script>
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/data.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/accessibility.js"></script>
+<script src="https://code.highcharts.com/stock/highstock.js"></script>
+<script src="https://code.highcharts.com/stock/modules/data.js"></script>
+<script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/stock/modules/accessibility.js"></script>
 </body>
 </html>
