--- a/html/author.html
+++ b/html/author.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="da">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -175,7 +175,7 @@
                                             <ul class="blog-list article__cart-info small-text">
                                                 <li class="blog-list__item">Author: Compriso</li>
                                                 <li class="blog-list__item">
-                                                    <time>august 2nd, 2021</time>
+                                                    <span>august 2nd, 2021</span>
                                                 </li>
                                             </ul>
                                         </div>
@@ -189,7 +189,7 @@
                                             <ul class="blog-list article__cart-info small-text">
                                                 <li class="blog-list__item">Author: Compriso</li>
                                                 <li class="blog-list__item">
-                                                    <time>august 2nd, 2021</time>
+                                                    <span>august 2nd, 2021</span>
                                                 </li>
                                             </ul>
                                         </div>
@@ -203,7 +203,7 @@
                                             <ul class="blog-list article__cart-info small-text">
                                                 <li class="blog-list__item">Author: Compriso</li>
                                                 <li class="blog-list__item">
-                                                    <time>august 2nd, 2021</time>
+                                                    <span>august 2nd, 2021</span>
                                                 </li>
                                             </ul>
                                         </div>
@@ -217,7 +217,7 @@
                                             <ul class="blog-list article__cart-info small-text">
                                                 <li class="blog-list__item">Author: Compriso</li>
                                                 <li class="blog-list__item">
-                                                    <time>august 2nd, 2021</time>
+                                                    <span>august 2nd, 2021</span>
                                                 </li>
                                             </ul>
                                         </div>
@@ -343,10 +343,10 @@
 <script src="js/main.js"></script>
 <!-- navigation js -->
 <script src="js/navigation.js"></script>
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/data.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/accessibility.js"></script>
+<script src="https://code.highcharts.com/stock/highstock.js"></script>
+<script src="https://code.highcharts.com/stock/modules/data.js"></script>
+<script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/stock/modules/accessibility.js"></script>
 </body>
 </html>
