--- a/html/blog.html
+++ b/html/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="da">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -152,7 +152,7 @@
                                     <ul class="blog-list blog__list">
                                         <li class="blog-list__item">Author: Compriso</li>
                                         <li class="blog-list__item">
-                                            <time>august 2nd, 2021</time>
+                                            <span>august 2nd, 2021</span>
                                         </li>
                                     </ul>
                                 </article>
@@ -166,7 +166,7 @@
                                     <ul class="blog-list blog__list">
                                         <li class="blog-list__item">Author: Compriso</li>
                                         <li class="blog-list__item">
-                                            <time>august 2nd, 2021</time>
+                                            <span>august 2nd, 2021</span>
                                         </li>
                                     </ul>
                                 </article>
@@ -180,7 +180,7 @@
                                     <ul class="blog-list blog__list">
                                         <li class="blog-list__item">Author: Compriso</li>
                                         <li class="blog-list__item">
-                                            <time>august 2nd, 2021</time>
+                                            <span>august 2nd, 2021</span>
                                         </li>
                                     </ul>
                                 </article>
@@ -194,7 +194,7 @@
                                     <ul class="blog-list blog__list">
                                         <li class="blog-list__item">Author: Compriso</li>
                                         <li class="blog-list__item">
-                                            <time>august 2nd, 2021</time>
+                                            <span>august 2nd, 2021</span>
                                         </li>
                                     </ul>
                                 </article>
@@ -208,7 +208,7 @@
                                     <ul class="blog-list">
                                         <li class="blog-list__item">Author: Compriso</li>
                                         <li class="blog-list__item">
-                                            <time>august 2nd, 2021</time>
+                                            <span>august 2nd, 2021</span>
                                         </li>
                                     </ul>
                                 </article>
@@ -222,7 +222,7 @@
                                     <ul class="blog-list">
                                         <li class="blog-list__item">Author: Compriso</li>
                                         <li class="blog-list__item">
-                                            <time>august 2nd, 2021</time>
+                                            <span>august 2nd, 2021</span>
                                         </li>
                                     </ul>
                                 </article>
@@ -236,7 +236,7 @@
                                     <ul class="blog-list">
                                         <li class="blog-list__item">Author: Compriso</li>
                                         <li class="blog-list__item">
-                                            <time>august 2nd, 2021</time>
+                                            <span>august 2nd, 2021</span>
                                         </li>
                                     </ul>
                                 </article>
@@ -250,7 +250,7 @@
                                     <ul class="blog-list">
                                         <li class="blog-list__item">Author: Compriso</li>
                                         <li class="blog-list__item">
-                                            <time>august 2nd, 2021</time>
+                                            <span>august 2nd, 2021</span>
                                         </li>
                                     </ul>
                                 </article>
@@ -368,7 +368,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info small-text">august 2nd, 2021</time>
+                <span class="article__cart-info small-text">august 2nd, 2021</span>
             </div>
         </li>
         <li class="article__cart app-card">
@@ -377,7 +377,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info small-text">august 2nd, 2021</time>
+                <span class="article__cart-info small-text">august 2nd, 2021</span>
             </div>
         </li>
         <li class="article__cart app-card">
@@ -386,7 +386,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info small-text">august 2nd, 2021</time>
+                <span class="article__cart-info small-text">august 2nd, 2021</span>
             </div>
         </li>
         <li class="article__cart app-card">
@@ -395,7 +395,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info small-text">august 2nd, 2021</time>
+                <span class="article__cart-info small-text">august 2nd, 2021</span>
             </div>
         </li>
     </ul>
@@ -457,10 +457,10 @@
 <script src="js/main.js"></script>
 <!-- navigation js -->
 <script src="js/navigation.js"></script>
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/data.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/accessibility.js"></script>
+<script src="https://code.highcharts.com/stock/highstock.js"></script>
+<script src="https://code.highcharts.com/stock/modules/data.js"></script>
+<script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/stock/modules/accessibility.js"></script>
 </body>
 </html>
