'add anim on select'

--- a/html/artikler.html
+++ b/html/artikler.html
@@ -211,6 +211,27 @@
                             </div>
                         </article>
                         <aside class="layout__sidebar sidebar">
+                            <div class="sidebar__item sidebar__small-menu">
+    <div class="row">
+        <ul>
+            <li>
+                <a href="#" class="app-card tab-card">Rejse</a>
+            </li>
+            <li>
+                <a href="#" class="app-card tab-card">Valuta</a>
+            </li>
+            <li>
+                <a href="#" class="app-card tab-card">Valutakurser</a>
+            </li>
+            <li>
+                <a href="#" class="app-card tab-card">Sponsoreret</a>
+            </li>
+        </ul>
+        <a href="#">
+            <img src="./images/tab-banner.jpg" width="249" height="193" alt="">
+        </a>
+    </div>
+</div>
                             <div class="sidebar__item sidebar__menu">
     <h3 class="sidebar__title h3-title">Popular Danske Kroner Currency Pairings</h3>
     <ul class="sidebar__list">
