--- a/html/dkk.html
+++ b/html/dkk.html
@@ -100,7 +100,7 @@
     </div> 
 </header>
         <main class="main">
-            <section class="first-section first-section__main">
+            <section class="first-section first-section__main first-section__with-banner">
     <div class="container">
         
             <h1 class="h1-title">SEK til DKK</h1>
@@ -113,7 +113,7 @@
                 <img src="./images/banner.jpg" width="295" height="325" alt="">
             </a>
             <form class="сonverter-сurrency">
-                <fieldset class="сonverter-сurrency__item js-сonverter-from">
+                <fieldset class="сonverter-сurrency__item js-converter-item">
                     <label class="hidden" for="value[first]">Enter first value</label>
                     <div class="сonverter-сurrency__input js-сonverter-сurrency-from">
                         <input id="valuefrom[first]" name="value[first]" value="1" type="tel">
@@ -186,12 +186,12 @@
                         </select>
                     </div>
                 </fieldset>
-                <button type="button" class="сonverter-сurrency__btn">
+                <button type="button" class="сonverter-сurrency__btn js-converter-btn">
                     <svg width="48" height="49" class="icon icon__stroke">
                         <use href="./images/icon/sprite.svg#arrow-up-down"></use>
                     </svg>
                 </button>
-                <fieldset class="сonverter-сurrency__item js-сonverter-to">
+                <fieldset class="сonverter-сurrency__item js-converter-item">
                     <label class="hidden" for="value[first]">Enter second value</label>
                     <div class="сonverter-сurrency__input js-сonverter-сurrency-from">
                         <input id="value[first]" name="value[second]" value="7,42" type="tel">
